--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,21 @@ services:
       - ./bets.db:/app/bets.db
     command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
 
+  dashboard:
+    build:
+      context: .
+      dockerfile: Dockerfile.dashboard
+    ports:
+      - "8501:8501"
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/nfl_betting
+    depends_on:
+      - postgres
+      - api
+    volumes:
+      - .:/app
+    command: streamlit run betting_system_ui.py --server.port 8501 --server.address 0.0.0.0
+
   postgres:
     image: postgres:14
     environment:
