--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,13 @@ python-dotenv>=1.0.0
 slack-bolt>=1.18.0
 slack-sdk>=3.23.0
 anthropic>=0.7.0
+google-generativeai>=0.3.0
 schedule>=1.2.0
 selenium>=4.0.0
 webdriver-manager>=3.8.0
 tabulate>=0.9.0
+
+streamlit>=1.30.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+openai>=1.0.0
